Modificati path musica

--- a/test1/test1.html
+++ b/test1/test1.html
@@ -24,8 +24,8 @@
     bufferLoader = new BufferLoader(
         context,
         [
-        '/music/voice01.ogg',
-        '/music/Poe_take01.ogg'
+        'music/voice01.ogg',
+        'music/Poe_take01.ogg'
         ],
         finishedLoading
         );
