--- a/test2/index.html
+++ b/test2/index.html
@@ -23,8 +23,8 @@
     bufferLoader = new BufferLoader(
         context,
         [
-        '/music/voice01.ogg',
-        '/music/Poe_take01.ogg'
+        'music/voice01.ogg',
+        'music/Poe_take01.ogg'
         ],
         finishedLoading
         );
